# Copyright 2024 Atakku <https://atakku.dev>
#
# This project is dual licensed under MIT and Apache.

[package]
name = "steamer"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release.package."*"]
codegen-units = 1
strip = true

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
bincode = "1.3.3"
dioxus = { version = "0.5", features = ["desktop"] }
directories = "5.0.1"
futures = "0.3.30"
keyvalues-serde = "0.2"
log = "0.4.21"
nestruct = "0.1.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
tokio = "1.37.0"
